создает паршал для страницы портфолио и импортирует его в главный файл

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,4 +8,5 @@
 @import "./layout/what-we-do";
 @import "./layout/our-team";
 @import "./layout/clients";
+@import "./layout/portfolio";
 @import "./layout/footer";
