--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -102,7 +102,7 @@
 .modal-form-input:focus + .modal-form-label,
 .modal-form-input:not(:placeholder-shown) + .modal-form-label {
   transform: translate(-26px, -40px);
-  color: var(--accent-color);
+  color: $accent-color;
   font-size: 12px;
   font-weight: 400;
   font-size: 12px;
@@ -115,11 +115,11 @@
 .modal-form-input:not(:placeholder-shown),
 .modal-form-comment:not(:placeholder-shown) {
   outline: none;
-  border-color: var(--accent-color);
+  border-color: $accent-color;
 }
 
 .modal-form-input:focus ~ .modal-input-svg {
-  fill: var(--accent-color);
+  fill: $accent-color;
 }
 
 .modal-input-svg {
@@ -132,7 +132,7 @@
 }
 
 .modal-form-input:focus ~ .modal-btn-svg {
-  fill: var(--accent-color);
+  fill: $accent-color;
 }
 
 .modal-form-submit-btn {
@@ -204,12 +204,12 @@
   background-image: url("../images/icon-check.svg");
   background-size: contain;
   background-origin: border-box;
-  border-color: var(--accent-color);
-  background-color: var(--accent-color);
+  border-color: $accent-color;
+  background-color: $accent-color;
 }
 
 .checkbox-agreement-link {
-  color: var(--accent-color);
+  color: $accent-color;
 }
 
 /* Кнопка CLOSE */
@@ -234,6 +234,6 @@
 }
 
 .modal-close-btn-svg:hover {
-  fill: var(--accent-color);
+  fill: $accent-color;
   border-color: rgba(0, 0, 0, 0.1);
 }
