--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -48,5 +48,5 @@
 
 .clients-list-item-link:hover .clients-icon,
 .clients-list-item-link:focus .clients-icon {
-  fill: var(--accent-color);
+  fill: $accent-color;
 }
