--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  font-family: var(--main-font);
+  font-family: $main-font;
   background-color: #ffffff;
   list-style: none;
 }
