--- a/sass/layout/_what-we-do.scss
+++ b/sass/layout/_what-we-do.scss
@@ -11,7 +11,7 @@
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--title-color);
+  color: $title-color;
 }
 
 .what-we-do-subtitle {
