--- a/sass/layout/_what-we-do.scss
+++ b/sass/layout/_what-we-do.scss
@@ -37,8 +37,8 @@
 .what-we-do-list-item {
   position: relative;
   width: calc((100% - 60px) / 3);
-}
 
-.what-we-do-list-item:not(:last-child) {
-  margin-right: 30px;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
