--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,24 +10,23 @@
     ),
     url(../images/hero.jpg);
   background-repeat: no-repeat;
-}
 
-.hero .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
-
-.hero-title {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: #ffffff;
+  &-title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .hero-button {
@@ -44,11 +43,11 @@
   text-align: center;
   letter-spacing: 0.06em;
   color: #ffffff;
-}
 
-.hero-button:hover,
-.hero-button:focus {
-  background-color: #188ce8;
-  color: #ffffff;
-  cursor: pointer;
+  &:hover,
+  &:focus {
+    background-color: #188ce8;
+    color: #ffffff;
+    cursor: pointer;
+  }
 }
