--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -1,12 +1,12 @@
 /* НАША КОМАНДА */
 
-.team .container {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .team {
   background-color: $section-background-color;
+
+  .container {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .team-list {
@@ -19,10 +19,10 @@
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 0px 0px 4px 4px;
-}
 
-.team-list-item:not(:last-child) {
-  margin-right: 30px;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .team-list-item-name {
@@ -62,6 +62,11 @@
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+  }
 }
 
 .team-social-link-list-item:not(:last-child) {
@@ -75,14 +80,9 @@
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.team-social-link:hover,
-.team-social-link:focus {
-  background-color: $accent-color;
-}
-
-.team-social-link:hover .team-social-icon,
-.team-social-link:focus .team-social-icon {
-  fill: #ffffff;
+  .team-social-link:hover &,
+  .team-social-link:focus & {
+    fill: #ffffff;
+  }
 }
