--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -11,10 +11,10 @@
 
 .portfolio-filter-list-item {
   margin-right: 8px;
-}
 
-.portfolio-filter-list-item:last-child {
-  margin-right: 0px;
+  &:last-child {
+    margin-right: 0px;
+  }
 }
 
 .portfolio-button {
@@ -34,18 +34,16 @@
 
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.portfolio-button:hover,
-.portfolio-button:focus {
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 3px 1px rgba(0, 0, 0, 0.1);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 3px 1px rgba(0, 0, 0, 0.1);
 
-  border-radius: 4px;
+    background-color: $accent-color;
 
-  background-color: $accent-color;
-
-  color: #ffffff;
+    color: #ffffff;
+  }
 }
 
 .portfolio-list {
@@ -58,6 +56,14 @@
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+
+  &:nth-child(3n) {
+    margin-right: 0px;
+  }
+
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 
 .portfolio-list-item-link {
@@ -65,14 +71,12 @@
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.portfolio-list-item:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.portfolio-list-item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+  &:hover,
+  &:focus {
+    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      0px 1px 1px rgba(0, 0, 0, 0.12);
+  }
 }
 
 .portfolio-list-item-name {
@@ -96,12 +100,6 @@
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: $main-text-color;
-}
-
-.portfolio-list-item-link:hover,
-.portfolio-list-item-link:focus {
-  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .potfolio-desc {
@@ -132,9 +130,9 @@
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.portfolio-list-item-link:hover .portfolio-hover-desc {
-  transform: translateY(0%);
-  opacity: 1;
+  .portfolio-list-item-link:hover & {
+    transform: translateY(0%);
+    opacity: 1;
+  }
 }
