--- a/CSS/main.css
+++ b/CSS/main.css
@@ -51,8 +51,8 @@ img {
   position: fixed;
   width: 100%;
   height: 100%;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -147,7 +147,6 @@ img {
   color: #2196f3;
   font-size: 12px;
   font-weight: 400;
-  font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
 }
@@ -904,7 +903,7 @@ img {
 }
 
 .footer-subscribe-input, .footer-subscribe-input::placeholder {
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
