--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,8 +4,8 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -105,7 +105,6 @@
   color: $accent-color;
   font-size: 12px;
   font-weight: 400;
-  font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
 }
