--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -107,7 +107,7 @@
 
     &,
     &::placeholder {
-      font-family: Roboto;
+      font-family: $main-font;
       font-weight: 400;
       font-size: 16px;
       line-height: 1.25;
