заменяет тип шрифта созданной ранее переменной

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -127,7 +127,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
-    font-family: Roboto;
+    font-family: $main-font;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
